
[project]
name = "crawler_test"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
exclude = """"
/(
    venv
)/
"""

[tool.pdm.scripts]
check = { composite = [
    "isort ./src",
    "black ./src",
    "flake8 ./src",
] }
