
[project]
name = "crawler_test"
version = "0.1.0"
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "requests>=2.31.0",
    "bs4>=0.0.1",
    "lxml>=4.9.2",
    "aiohttp>=3.8.4",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
exclude = """"
/(
    venv
)/
"""

[tool.pdm.scripts]
check = { composite = [
    "isort ./src",
    "black ./src",
    "flake8 ./src",
] }
